// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`KR31.13 — набуття риси на підвищенні рівня (характеризація) > RULES_2014 ATHLETE 1`] = `
{
  "character": {
    "additionalSaveProficiencies": [],
    "cha": 8,
    "con": 14,
    "customLanguagesKnown": "Загальна",
    "customProficiencies": "Усі обладунки",
    "dex": 13,
    "feats": [
      {
        "choices": [
          "ATHLETE Ability (Strength)",
        ],
        "name": "ATHLETE",
      },
    ],
    "features": [
      "Ability Score Improvement",
      "Human: Ability Score Increase",
      "Human: Age",
      "Human: Alignment",
    ],
    "int": 12,
    "level": 4,
    "maxHp": 36,
    "persSpells": [],
    "skills": [],
    "str": 16,
    "wis": 10,
  },
  "result": {
    "success": true,
  },
}
`;

exports[`KR31.13 — набуття риси на підвищенні рівня (характеризація) > RULES_2014 HEAVILY_ARMORED 1`] = `
{
  "character": {
    "additionalSaveProficiencies": [],
    "cha": 8,
    "con": 14,
    "customLanguagesKnown": "Загальна",
    "customProficiencies": "Усі обладунки
Важкі обладунки",
    "dex": 13,
    "feats": [
      {
        "choices": [],
        "name": "HEAVILY_ARMORED",
      },
    ],
    "features": [
      "Ability Score Improvement",
      "Human: Ability Score Increase",
      "Human: Age",
      "Human: Alignment",
    ],
    "int": 12,
    "level": 4,
    "maxHp": 36,
    "persSpells": [],
    "skills": [],
    "str": 16,
    "wis": 10,
  },
  "result": {
    "success": true,
  },
}
`;

exports[`KR31.13 — набуття риси на підвищенні рівня (характеризація) > RULES_2014 LINGUIST 1`] = `
{
  "character": {
    "additionalSaveProficiencies": [],
    "cha": 8,
    "con": 14,
    "customLanguagesKnown": "Загальна
Обери ще 3
Ельфійська
Дворфська
Мова велетнів",
    "customProficiencies": "Усі обладунки",
    "dex": 13,
    "feats": [
      {
        "choices": [],
        "name": "LINGUIST",
      },
    ],
    "features": [
      "Ability Score Improvement",
      "Human: Ability Score Increase",
      "Human: Age",
      "Human: Alignment",
    ],
    "int": 13,
    "level": 4,
    "maxHp": 36,
    "persSpells": [],
    "skills": [],
    "str": 15,
    "wis": 10,
  },
  "result": {
    "success": true,
  },
}
`;

exports[`KR31.13 — набуття риси на підвищенні рівня (характеризація) > RULES_2014 MARTIAL_ADEPT 1`] = `
{
  "character": {
    "additionalSaveProficiencies": [],
    "cha": 8,
    "con": 14,
    "customLanguagesKnown": "Загальна",
    "customProficiencies": "Усі обладунки",
    "dex": 13,
    "feats": [
      {
        "choices": [
          "Riposte (Maneuver)",
          "Trip Attack (Maneuver)",
        ],
        "name": "MARTIAL_ADEPT",
      },
    ],
    "features": [
      "Ability Score Improvement",
      "Human: Ability Score Increase",
      "Human: Age",
      "Human: Alignment",
      "Riposte",
      "Trip Attack",
    ],
    "int": 12,
    "level": 4,
    "maxHp": 36,
    "persSpells": [],
    "skills": [],
    "str": 15,
    "wis": 10,
  },
  "result": {
    "success": true,
  },
}
`;

exports[`KR31.13 — набуття риси на підвищенні рівня (характеризація) > RULES_2014 OBSERVANT 1`] = `
{
  "character": {
    "additionalSaveProficiencies": [],
    "cha": 8,
    "con": 14,
    "customLanguagesKnown": "Загальна",
    "customProficiencies": "Усі обладунки",
    "dex": 13,
    "feats": [
      {
        "choices": [
          "OBSERVANT Ability (Wisdom)",
        ],
        "name": "OBSERVANT",
      },
    ],
    "features": [
      "Ability Score Improvement",
      "Human: Ability Score Increase",
      "Human: Age",
      "Human: Alignment",
    ],
    "int": 12,
    "level": 4,
    "maxHp": 36,
    "persSpells": [],
    "skills": [],
    "str": 15,
    "wis": 11,
  },
  "result": {
    "success": true,
  },
}
`;

exports[`KR31.13 — набуття риси на підвищенні рівня (характеризація) > RULES_2014 PRODIGY 1`] = `
{
  "character": {
    "additionalSaveProficiencies": [],
    "cha": 8,
    "con": 14,
    "customLanguagesKnown": "Загальна
Обери ще 1
Ельфійська",
    "customProficiencies": "Усі обладунки",
    "dex": 13,
    "feats": [
      {
        "choices": [
          "Prodigy Expertise (INSIGHT)",
          "Prodigy Proficiency (INSIGHT)",
        ],
        "name": "PRODIGY",
      },
    ],
    "features": [
      "Ability Score Improvement",
      "Human: Ability Score Increase",
      "Human: Age",
      "Human: Alignment",
    ],
    "int": 12,
    "level": 4,
    "maxHp": 36,
    "persSpells": [],
    "skills": [
      "INSIGHT:EXPERTISE",
    ],
    "str": 15,
    "wis": 10,
  },
  "result": {
    "success": true,
  },
}
`;

exports[`KR31.13 — набуття риси на підвищенні рівня (характеризація) > RULES_2014 RESILIENT 1`] = `
{
  "character": {
    "additionalSaveProficiencies": [
      "CON",
    ],
    "cha": 8,
    "con": 15,
    "customLanguagesKnown": "Загальна",
    "customProficiencies": "Усі обладунки",
    "dex": 13,
    "feats": [
      {
        "choices": [
          "Resilient (Constitution)",
        ],
        "name": "RESILIENT",
      },
    ],
    "features": [
      "Ability Score Improvement",
      "Human: Ability Score Increase",
      "Human: Age",
      "Human: Alignment",
    ],
    "int": 12,
    "level": 4,
    "maxHp": 36,
    "persSpells": [],
    "skills": [],
    "str": 15,
    "wis": 10,
  },
  "result": {
    "success": true,
  },
}
`;

exports[`KR31.13 — набуття риси на підвищенні рівня (характеризація) > RULES_2014 SKILL_EXPERT 1`] = `
{
  "character": {
    "additionalSaveProficiencies": [],
    "cha": 8,
    "con": 14,
    "customLanguagesKnown": "Загальна",
    "customProficiencies": "Усі обладунки",
    "dex": 14,
    "feats": [
      {
        "choices": [
          "Skill Expert (DEX)",
          "Skill Expert Expertise (STEALTH)",
          "Skill Expert Proficiency (STEALTH)",
        ],
        "name": "SKILL_EXPERT",
      },
    ],
    "features": [
      "Ability Score Improvement",
      "Human: Ability Score Increase",
      "Human: Age",
      "Human: Alignment",
    ],
    "int": 12,
    "level": 4,
    "maxHp": 36,
    "persSpells": [],
    "skills": [
      "STEALTH:EXPERTISE",
    ],
    "str": 15,
    "wis": 10,
  },
  "result": {
    "success": true,
  },
}
`;

exports[`KR31.13 — набуття риси на підвищенні рівня (характеризація) > RULES_2014 TOUGH 1`] = `
{
  "character": {
    "additionalSaveProficiencies": [],
    "cha": 8,
    "con": 14,
    "customLanguagesKnown": "Загальна",
    "customProficiencies": "Усі обладунки",
    "dex": 13,
    "feats": [
      {
        "choices": [],
        "name": "TOUGH",
      },
    ],
    "features": [
      "Ability Score Improvement",
      "Human: Ability Score Increase",
      "Human: Age",
      "Human: Alignment",
    ],
    "int": 12,
    "level": 4,
    "maxHp": 44,
    "persSpells": [],
    "skills": [],
    "str": 15,
    "wis": 10,
  },
  "result": {
    "success": true,
  },
}
`;

exports[`KR31.13 — набуття риси на підвищенні рівня (характеризація) > RULES_2024 ALERT 1`] = `
{
  "character": {
    "additionalSaveProficiencies": [],
    "cha": 8,
    "con": 14,
    "customLanguagesKnown": "Загальна",
    "customProficiencies": "Усі обладунки",
    "dex": 13,
    "feats": [
      {
        "choices": [],
        "name": "ALERT",
      },
    ],
    "features": [
      "Alert: Initiative Proficiency (2024)",
      "Fighter: Ability Score Improvement (2024)",
      "Human: Resourceful (2024)",
      "Human: Skillful (2024)",
      "Human: Versatile (2024)",
      "Origin Feat: Alert (2024)",
    ],
    "int": 12,
    "level": 4,
    "maxHp": 36,
    "persSpells": [],
    "skills": [],
    "str": 15,
    "wis": 10,
  },
  "result": {
    "success": true,
  },
}
`;

exports[`KR31.13 — набуття риси на підвищенні рівня (характеризація) > RULES_2024 CRAFTER 1`] = `
{
  "character": {
    "additionalSaveProficiencies": [],
    "cha": 8,
    "con": 14,
    "customLanguagesKnown": "Загальна",
    "customProficiencies": "Усі обладунки
Інструменти на вибір (3)",
    "dex": 13,
    "feats": [
      {
        "choices": [],
        "name": "CRAFTER",
      },
    ],
    "features": [
      "Fighter: Ability Score Improvement (2024)",
      "Human: Resourceful (2024)",
      "Human: Skillful (2024)",
      "Human: Versatile (2024)",
      "Origin Feat: Crafter (2024)",
    ],
    "int": 12,
    "level": 4,
    "maxHp": 36,
    "persSpells": [],
    "skills": [],
    "str": 15,
    "wis": 10,
  },
  "result": {
    "success": true,
  },
}
`;

exports[`KR31.13 — набуття риси на підвищенні рівня (характеризація) > RULES_2024 HEAVILY_ARMORED 1`] = `
{
  "character": {
    "additionalSaveProficiencies": [],
    "cha": 8,
    "con": 15,
    "customLanguagesKnown": "Загальна",
    "customProficiencies": "Усі обладунки
Важкі обладунки",
    "dex": 13,
    "feats": [
      {
        "choices": [
          "Heavily Armored 2024 (CON)",
        ],
        "name": "HEAVILY_ARMORED",
      },
    ],
    "features": [
      "Fighter: Ability Score Improvement (2024)",
      "Human: Resourceful (2024)",
      "Human: Skillful (2024)",
      "Human: Versatile (2024)",
    ],
    "int": 12,
    "level": 4,
    "maxHp": 36,
    "persSpells": [],
    "skills": [],
    "str": 15,
    "wis": 10,
  },
  "result": {
    "success": true,
  },
}
`;

exports[`KR31.13 — набуття риси на підвищенні рівня (характеризація) > RULES_2024 RESILIENT 1`] = `
{
  "character": {
    "additionalSaveProficiencies": [
      "WIS",
    ],
    "cha": 8,
    "con": 14,
    "customLanguagesKnown": "Загальна",
    "customProficiencies": "Усі обладунки",
    "dex": 13,
    "feats": [
      {
        "choices": [
          "Resilient 2024 (WIS)",
        ],
        "name": "RESILIENT",
      },
    ],
    "features": [
      "Fighter: Ability Score Improvement (2024)",
      "Human: Resourceful (2024)",
      "Human: Skillful (2024)",
      "Human: Versatile (2024)",
    ],
    "int": 12,
    "level": 4,
    "maxHp": 36,
    "persSpells": [],
    "skills": [],
    "str": 15,
    "wis": 11,
  },
  "result": {
    "success": true,
  },
}
`;

exports[`KR31.13 — набуття риси на підвищенні рівня (характеризація) > RULES_2024 SKILL_EXPERT 1`] = `
{
  "character": {
    "additionalSaveProficiencies": [],
    "cha": 8,
    "con": 14,
    "customLanguagesKnown": "Загальна",
    "customProficiencies": "Усі обладунки",
    "dex": 13,
    "feats": [
      {
        "choices": [
          "Skill Expert 2024 (INT)",
          "Skill Expert 2024 expertise (ARCANA)",
          "Skill Expert 2024 proficiency (ARCANA)",
        ],
        "name": "SKILL_EXPERT",
      },
    ],
    "features": [
      "Fighter: Ability Score Improvement (2024)",
      "Human: Resourceful (2024)",
      "Human: Skillful (2024)",
      "Human: Versatile (2024)",
    ],
    "int": 13,
    "level": 4,
    "maxHp": 36,
    "persSpells": [],
    "skills": [
      "ARCANA:EXPERTISE",
    ],
    "str": 15,
    "wis": 10,
  },
  "result": {
    "success": true,
  },
}
`;

exports[`KR31.13 — набуття риси на підвищенні рівня (характеризація) > RULES_2024 SKILLED 1`] = `
{
  "character": {
    "additionalSaveProficiencies": [],
    "cha": 8,
    "con": 14,
    "customLanguagesKnown": "Загальна",
    "customProficiencies": "Усі обладунки",
    "dex": 13,
    "feats": [
      {
        "choices": [
          "Skilled 2024 (ARCANA)",
          "Skilled 2024 (HISTORY)",
          "Skilled 2024 (STEALTH)",
        ],
        "name": "SKILLED",
      },
    ],
    "features": [
      "Fighter: Ability Score Improvement (2024)",
      "Human: Resourceful (2024)",
      "Human: Skillful (2024)",
      "Human: Versatile (2024)",
      "Origin Feat: Skilled (2024)",
    ],
    "int": 12,
    "level": 4,
    "maxHp": 36,
    "persSpells": [],
    "skills": [
      "ARCANA:PROFICIENT",
      "HISTORY:PROFICIENT",
      "STEALTH:PROFICIENT",
    ],
    "str": 15,
    "wis": 10,
  },
  "result": {
    "success": true,
  },
}
`;

exports[`KR31.13 — набуття риси на підвищенні рівня (характеризація) > RULES_2024 TOUGH 1`] = `
{
  "character": {
    "additionalSaveProficiencies": [],
    "cha": 8,
    "con": 14,
    "customLanguagesKnown": "Загальна",
    "customProficiencies": "Усі обладунки",
    "dex": 13,
    "feats": [
      {
        "choices": [],
        "name": "TOUGH",
      },
    ],
    "features": [
      "Fighter: Ability Score Improvement (2024)",
      "Human: Resourceful (2024)",
      "Human: Skillful (2024)",
      "Human: Versatile (2024)",
      "Origin Feat: Tough (2024)",
    ],
    "int": 12,
    "level": 4,
    "maxHp": 44,
    "persSpells": [],
    "skills": [],
    "str": 15,
    "wis": 10,
  },
  "result": {
    "success": true,
  },
}
`;
